server/styles/style.css
/* TODO: Add more font styles */
:root {
  --black: #141b1e;
  --dark-gray: #232a2d;
  --red: #e57474;
  --green: #8ccf7e;
  --yellow: #e5c76b;
  --blue: #67b0e8;
  --magenta: #c47fd5;
  --cyan: #6cbfbf;
  --light-gray: #b3b9b8;
  --white: #dadada;

  --mono-font-family: "Iosevka Term", Monaco, "Courier New", "Courier", monospace;

  --bg-inline-code: var(--dark-gray);
  --bg-code-block: var(--dark-gray);
  --url-foreground: var(--blue);

  /* Components */
  --navbar-height: 3.5rem;
  --sidebar-width: 15rem;
  --sidebar-anim-time: 150ms;


  font-family: Helvetica, Arial, serif;
  font-size: 110%;
}

html,
body,
main {
  margin: 0;
  padding: 0;

  background-color: var(--black);
  color: var(--white);
}

html, body {
  height: 100%;
}

main {
  display: grid;
  min-height: 100vh;
  grid-template:
    "navbar" var(--navbar-height)
    "content" 1fr;
}

form:invalid input[type="submit"] {
  opacity: 0.3;
  pointer-events: none;
}

input:is([name="username"], [name="password"], [name="password_confirmation"]):valid {
  outline: 2px solid var(--green);
}

input:is([name="username"], [name="password"], [name="password_confirmation"]):required:user-invalid {
  outline: 2px solid var(--red);
}


/* Logo */
a#logo {
  margin: 0;

  user-select: none;
  color: var(--white);
  font-weight: bold;
  font-size: 15pt;
  text-decoration: none;
}


/* Navbar */
.header_nav {
  grid-area: navbar;
  position: sticky;
  top: 0;

  display: flex;
  gap: 1rem;
  align-items: center;
  padding-inline: 1.25rem;

  color: white;
  background-color: var(--black);
  border-bottom: 2px solid var(--dark-gray);
}

.header_nav.hidden {
  top: calc(var(--navbar-height) * -1);
}

/* Navbar animations */
@media (prefers-reduced-motion: no-preference) {
  .header_nav {
    transition: top .25s ease-out;
  }

  .header_nav.hidden {
    transition: top .4s ease-in;
  }
}

.header_nav > * {
  display: flex;
  align-items: center;
  gap: .25rem;
}

.left_nav {
  margin-right: auto;
  gap: .75rem;
}

.right_nav {
  gap: 1rem;
  margin-left: auto;
}

.right_nav :where(input, a) {
  border: none;

  color: var(--white);
  font-size: 12pt;
  text-decoration: none;
  cursor: pointer;
}

.logout_btn {
  background: none;
}

.signup_btn {
  padding: .4rem;

  color: var(--black);
  background-color: white;
  border-radius: .15rem;
}


/* Welcome page */
.welcome, .login, .signup {
  grid-area: content;

  padding: 4rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  box-sizing: border-box;
}


/* Login & Signup pages  */
.login, .signup {
  justify-content: center;
}

.error {
  color: var(--red);
}

:is(.login, .signup) > form {
  display: flex;
  flex-direction: column;
  gap: .75rem;

  padding: 6rem 4rem;
  border-radius: 1rem;
  aspect-ratio: 1/1.25;

  background-color: white;
  color: var(--black);
}

:is(.login, .signup) > form input[type="checkbox"] {
  margin: 0;
}

/* NOTE: Consider CSS nesting in the future */
:is(.login, .signup) > form > fieldset {
  margin: 0;
  padding: 0;
  border: none;

  display: flex;
  gap: .35rem;
  align-items: center;
}

:is(.login, .signup) > form > h1 {
  margin: 0 auto;
}

:is(.login, .signup) > form > label {
  margin-top: 1.5em;
}

:is(.login, .signup) > form > p {
  margin: 0;
}

/* All inputs in form except last */
:is(.login, .signup) > form > input:nth-last-child(n+2) {
  font-size: 16pt;
  border: 1px solid gray;
  border-radius: .2rem;
}

:is(.login, .signup) > form > input:last-child {
  margin: 0 auto;
  margin-top: 2rem;
  padding: .5rem 1rem;

  border: 1px solid black;
  background-color: white;
  font-size: 11pt;
  cursor: pointer;
}


/* Table of Contents */
label#toc_revealer {
  user-select: none;
  cursor: pointer;

  font-size: 24pt;
}

nav#toc_wrapper {
  grid-area: content;

  width: var(--sidebar-width);
  height: calc(100vh - var(--navbar-height));
  box-sizing: border-box;
  padding: 1rem;
  padding-right: 1.5rem;
  overflow-y: scroll;
  word-break: break-all;

  color: white;
  background-color: var(--dark-gray);
  font-size: 12pt;

  /* Place outside of viewport while inactive */
  position: fixed;
  top: var(--navbar-height);
  pointer-events: none;
  translate: calc(var(--sidebar-width) * -1) 0;
}

#toc_state:checked ~ nav#toc_wrapper {
  /* Bring element back */
  position: sticky;
  pointer-events: auto;
  translate: 0;
}

#toc_state:checked ~ article#notes_wrapper {
  margin-left: var(--sidebar-width);
}

/* Sidebar animations */
@media (prefers-reduced-motion: no-preference) {
  nav#toc_wrapper {
    transition: translate var(--sidebar-anim-time) ease-in;
  }

  #toc_state:checked ~ nav#toc_wrapper {
    transition: translate var(--sidebar-anim-time) ease-out;
  }

  #notes_wrapper {
    transition: margin var(--sidebar-anim-time) ease-in;
  }
}

nav#toc_wrapper ul {
  display: flex;
  flex-direction: column;
  gap: .75em;

  margin: 0;
  padding: 0;
}

ul#toc li {
  /* Remove list markers */
  display: block;
}

ul#toc a {
  color: inherit;
  text-decoration: none;
}

/* Indent list items */
ul#toc li ul {
  margin-left: 1em;
}


/* Notes pages */
#notes_wrapper {
  grid-area: content;

  min-height: 100%;
  box-sizing: border-box;
  margin: 0;
  padding-inline: 1.5rem;
  padding-block: 5vh;
}

#notes {
  display: grid;
  grid-template-columns:
    minmax(0, 1fr) [content] minmax(min(90ch, 100%), 1fr) minmax(0, 1fr);
}

#notes > h1:first-child {
  margin-top: 0;
}

#notes > * {
  grid-column: content;
}

/* Typography */
#notes :is(h1,
  h2,
  h3,
  h4,
  h5,
  h6) {
  font-weight: bold;
  line-height: 130%;
  margin-top: 2.5rem;
  margin-bottom: 0.5rem;
}

#notes :is(p,
  pre,
  blockquote,
  table,
  ul,
  ol,
  dl) {
  color: white;
  margin-top: 1em;
}

#notes :is(ul ul,
  ul ol,
  ol ol,
  ol ul) {
  color: white;
  margin-top: 0.5em;
}

#notes h1 {
  font-size: 2.5rem;
  color: white;
  margin-top: 2em;
  border-bottom: 1px solid white;
  padding-bottom: 1rem;
}

#notes h2 {
  font-size: 2.0rem;
  color: white;
  margin-top: 1em;
}

#notes h3 {
  font-size: 1.60rem;
  color: hsl(0, 0%, 80%);
}

#notes h4 {
  font-size: 1.30rem;
  color: hsl(0, 0%, 75%);
}

#notes h5 {
  font-size: 1.15rem;
  color: hsl(0, 0%, 62%);
}

#notes h6 {
  font-size: 0.95rem;
  color: hsl(0, 0%, 50%);
}

#notes li {
  color: white;
  margin: 0.3rem auto;
}

#notes ul {
  color: white;
  margin-left: 2em;
  padding-left: 0;
}

#notes dt {
  font-weight: bold;
}

#notes pre {
  border: 0.05rem solid white;
  max-width: 100%;
  background-color: var(--bg-code-block);
  border-radius: 0.5rem;
  font-size: 0.8rem;
  padding: 0.5rem 1rem;
}


/* Images */
#notes :is(embed,
  figcaption,
  img,
  video) {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

#notes :is(th, td) {
  background-color: var(--bg-inline-code);
  border: 1px solid #ccc;
  padding: 0.3rem;
}

#notes img {
  border: none;
  padding-top: 1rem;
}

#notes figcaption {
  color: hsl(40, 3%, 53%);
  font-style: italic;
  font-size: 80%;
}

#notes blockquote {
  color: hsl(0, 0%, 41%);
  line-height: 110%;
  padding-left: 0.8rem;
  border-left: 5px solid hsl(0, 0%, 86%);
  margin: 1rem 0rem;
  margin-left: 0.5rem
}

#notes hr {
  border: none;
  border-top: 1px solid #999;
  margin-block: 4rem;
  width: 45%;
}

#notes del {
  text-decoration: line-through;
  color: #777;
}

#notes code {
  font-family: var(--mono-font-family);
  white-space: normal;
}

/* Anchor Tags */
#notes :is(p, li)>a {
  color: var(--url-foreground);
  font-weight: bold;
  text-decoration: none;
}

#notes :is(p, li)>a:hover {
  color: hsl(0, 0%, 86%);
  background-color: hsl(0, 0%, 28%);
}

/* Inline code blocks */
#notes :is(p, li, ul)>code {
  background-color: var(--bg-inline-code);
  display: inline-block;
  padding: 0rem 0.25rem;
}

